# yu

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  dependabot-automerge.yml  release.yml  rust.yml
i18n/en_US/: text.ftl
i18n/zh-TW/: text.ftl
package/: package.json
script/: install.fish  install.sh
src/: env.rs  language.rs  main.rs  package.rs  root.rs  syntax.rs
src/command/: autoremove.rs  info.rs  install.rs  list.rs  mod.rs  reinstall.rs  search.rs  self_upgrade.rs  uninstall.rs  update.rs  upgrade.rs
tests/: cli.rs
